--- a/Lab 11/pom.xml
+++ b/Lab 11/pom.xml
@@ -5,18 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Wspolbieznosc_4</artifactId>
+    <artifactId>Lab10</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>7</source>
-                    <target>7</target>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -27,18 +19,17 @@
             </plugin>
         </plugins>
     </build>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <dependencies>
-        <dependency>
-            <groupId>org.jfree</groupId>
-            <artifactId>jfreechart</artifactId>
-            <version>1.5.0</version>
-        </dependency>
         <dependency>
             <groupId>org.codehaus.jcsp</groupId>
             <artifactId>jcsp</artifactId>
             <version>1.1-rc5</version>
         </dependency>
     </dependencies>
-
-
 </project>
